--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -11,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GonzalezAlamoM03"
-        tools:targetApi="34">
+        tools:targetApi="34"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".login"
             android:exported="true">
@@ -21,7 +23,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ContenedorFragmentActivity" />
+
+        <activity android:name=".ContenedorFragmentActivity" android:exported="true" />
 
         <meta-data
             android:name="preloaded_fonts"
